Bug 188191 - Loading meta information failed.
Summary: Loading meta information failed.
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 189338 194130 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-03-26 20:38 UTC by Zack Rusin
Modified: 2012-10-19 13:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
sample image (1013 bytes, application/octet-stream)
2009-03-26 20:40 UTC, Zack Rusin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zack Rusin 2009-03-26 20:38:43 UTC
Version:            (using KDE 4.2.1)
OS:                Linux
Installed from:    Debian testing/unstable Packages

This seems to be a regression from Gwenview 3. Images which used to display, and display fine as thumbs now won't display in the main viewer window. A message saying "Loading 'image_name.ext' failed\n Loading meta information failed.". It's especially weird since the image which failed to load obviously didn't fail to load a thumbnail.
Comment 1 Zack Rusin 2009-03-26 20:40:06 UTC
Created attachment 32418 [details]
sample image
Comment 2 Maxim Borkunov 2009-03-31 18:52:37 UTC
The same problem.
Comment 3 Aurelien Gateau 2009-04-27 09:34:31 UTC
It seems the tga reader from KImgIO does not recognize your image as a .tga. Can you have a look at this patch I posted to reviewboard?

http://reviewboard.kde.org/r/634/
Comment 4 Zack Rusin 2009-04-27 17:06:11 UTC
I think the patch looks good. I wouldn't worry about performance at all. In the worst case working-slow is still a lot better than not-working-fast. 
I don't remember of the top of my head what IsSupported does with TgaHeader, but QRegExp is slow, and since the image header was just read the caches should still be warm for the qdatastream to read the file so it should be ok (unless IsSupported does some global matching with QRegExp of course =) ).
Comment 5 Aurelien Gateau 2009-04-27 17:39:41 UTC
> In the worst case working-slow is still a lot better than not-working-fast.
I was worried about performance when people open other images, since canRead() is called for all image, unless the user specify the format.
Comment 6 Aurelien Gateau 2009-04-28 10:21:13 UTC
SVN commit 960288 by gateau:

Added test image from bug report

CCBUG:188191

 A             188191_does_not_load.tga  
 M  +2 -0      documenttest.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=960288
Comment 7 Aurelien Gateau 2009-05-05 12:44:45 UTC
SVN commit 963718 by gateau:

Use TgaHeader instead of a regex in canRead().

BUG:188191

 M  +12 -6     tga.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=963718
Comment 8 Aurelien Gateau 2009-05-26 16:35:33 UTC
*** Bug 194130 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Feck 2009-10-16 16:29:42 UTC
*** Bug 189338 has been marked as a duplicate of this bug. ***