Use TgaHeader instead of a regex in canRead().

BUG:188191

svn path=/trunk/KDE/kdelibs/; revision=963718